--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,3 +1,6 @@
 {
-  "heroTitle": "Hi, i'm Laurain Clément"
+  "heroTitle": "Hi, i'm Laurain Clément",
+  "heroDesc": "Full stack typescript developper",
+  "aboutTitle": "About",
+  "projectsTitle": "Projects"
 }
