--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,3 +1,6 @@
 {
-  "heroTitle": "Bonjour, je suis Laurain Clément"
+  "heroTitle": "Laurain Clément",
+  "heroDesc": "Développeur typescript Full Stack",
+  "aboutTitle": "A propos",
+  "projectsTitle": "Projets"
 }
