✨ (Project Section): Complete the project section

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,9 @@
 {
-  "heroTitle": "Hi, i'm Laurain Clément",
-  "heroDesc": "Full stack typescript developper",
-  "aboutTitle": "About",
-  "projectsTitle": "Projects"
+	"heroTitle": "Hi, i'm Laurain Clément",
+	"heroDesc": "Full stack typescript developper",
+	"aboutTitle": "About",
+	"projectsTitle": "Projects",
+	"done": " ✅ Realised",
+	"inProgress": " ☕ In progress",
+	"design": " 🎨 Maquettage"
 }
