--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,5 +5,6 @@
 	"projectsTitle": "Projects",
 	"done": " ✅ Realised",
 	"inProgress": " ☕ In progress",
-	"design": " 🎨 Maquettage"
+	"design": " 🎨 Maquettage",
+	"all": "All"
 }
