--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -5,5 +5,6 @@
 	"projectsTitle": "Projets",
 	"done": " ✅ Réalisé",
 	"inProgress": " ☕ En cours de réalisation",
-	"design": " 🎨 Maquettage"
+	"design": " 🎨 Maquettage",
+	"all": "Tout"
 }
