✨ (Live): Add live section

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,5 +6,6 @@
 	"done": " ✅ Realised",
 	"inProgress": " ☕ In progress",
 	"design": " 🎨 Maquettage",
-	"all": "All"
+	"all": "All",
+	"liveTitle": "Follow me on live"
 }
