--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -6,5 +6,6 @@
 	"done": " ✅ Réalisé",
 	"inProgress": " ☕ En cours de réalisation",
 	"design": " 🎨 Maquettage",
-	"all": "Tout"
+	"all": "Tout",
+	"liveTitle": "Suivez moi en direct"
 }
