--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,5 +7,6 @@
 	"inProgress": " ☕ In progress",
 	"design": " 🎨 Maquettage",
 	"all": "All",
-	"liveTitle": "Follow me on live"
+	"liveTitle": "Follow me on live",
+	"noProjects": "Oops ! No projects found"
 }
