✨ (menu): Add menu feature

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -8,5 +8,11 @@
 	"design": " 🎨 Maquettage",
 	"all": "All",
 	"liveTitle": "Follow me on live",
-	"noProjects": "Oops ! No projects found"
+	"noProjects": "Oops ! No projects found",
+	"home": "Home",
+	"technologies": "Technos",
+	"curriculum": "Curriculum",
+	"projects": "Projects",
+	"live": "Live",
+	"contact": "Contact"
 }
