--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -8,5 +8,11 @@
 	"design": " 🎨 Maquettage",
 	"all": "Tout",
 	"liveTitle": "Suivez moi en direct",
-	"noProjects": "Oops ! Aucun projet trouvé"
+	"noProjects": "Oops ! Aucun projet trouvé",
+	"home": "Acceuil",
+	"technologies": "Technos",
+	"curriculum": "Cursus",
+	"projects": "Projets",
+	"live": "Direct",
+	"contact": "Contact"
 }
