--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,5 +14,7 @@
 	"curriculum": "Curriculum",
 	"projects": "Projects",
 	"live": "Live",
-	"contact": "Contact"
+	"contact": "Contact",
+	"happyToSeeYou": "I'm happy to see you here",
+	"myLinks": "My links"
 }
