✨ (Cursus page): Add cursus page animations and translations

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -9,7 +9,7 @@
 	"all": "Tout",
 	"liveTitle": "Suivez moi en direct",
 	"noProjects": "Oops ! Aucun projet trouvé",
-	"home": "Acceuil",
+	"home": "Accueil",
 	"technologies": "Technos",
 	"curriculum": "Cursus",
 	"projects": "Projets",
