--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -20,5 +20,8 @@
 	"message1": "<h2 class='inline-block mx-2 hello-anim'>👋</h2>\r\n\t<h2 class='inline-block'>Hello world !</h2>\r\n\t<p>Happy to see you here !</p>",
 	"message2": "<p> My links  <span class='point-anim inline-block'>👇👇</span></p>\r\n\t\t<p class='text-center mt-2'>\r\n\t\t\t<a href='https://github.com/LaurainClem?tab=repositories' target='_blank'><i class='fab fa-github'></i></a>\r\n\t\t\t<a href='https://fr.linkedin.com/in/cl%C3%A9ment-laurain-2b1b97182' target='_blank'><i class='fab fa-linkedin'></i></a>\r\n\t\t\t<a href='https://twitch.com/clemcode' target='_blank'><i class='fab fa-twitch'></i></a>\r\n\t\t</p>",
 	"message3": "pwet",
-	"scrollToDiscoverProjects": "Scroll down"
+	"scrollToDiscoverProjects": "Scroll slowly",
+	"prev": "Prev",
+	"next": "Next",
+	"rightsReserved": "All rights reserved"
 }
