--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -23,5 +23,10 @@
 	"scrollToDiscoverProjects": "Défilez doucement",
 	"prev": "Précédent",
 	"next": "Suivant",
-	"rightsReserved": "Tous droits réservés"
+	"rightsReserved": "Tous droits réservés",
+	"name": "Nom",
+	"firstName": "Prénom",
+	"email": "Adresse email",
+	"message": "Votre message ...",
+	"send": "Envoyer"
 }
